--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ nav{
   align-items: center;
   justify-content: center;
   color: #fff;
-  padding: 5rem; /* Povećajte vrijednost prema potrebi */
+  padding: 5rem; 
   overflow-y: scroll;
   transform: scale(0);
   transition: 200ms ease-in-out transform;
@@ -240,7 +240,7 @@ nav{
     cursor: pointer;
 }
 .content .left .single-info .heart-icon:hover { transform: scale(1.1); }
-.content .left .single-info .heart-icon:active { transform: scale(.9); }
+.content .left .single-info .heart-icon:active { transform: scale(.5); }
 
 .poster-img {
     width: 300px;
